--- a/achievements.html
+++ b/achievements.html
@@ -8,11 +8,11 @@
   
 </head>
 <body>
-
-  
-
-  <div class="achievement-container">
+  <header class="site-header">
     <h1>My Achievements</h1>
+  </header>
+
+  <main class="achievement-container">
     <div class="achievement-card">
       <i class="fas fa-trophy"></i>
       <div class="achievement-number">1</div>
@@ -27,10 +27,14 @@
 
     <div class="achievement-card">
       <i class="fas fa-award"></i>
-      <div class="achievement-number"></div>
+      <div class="achievement-number">3</div>
       <div class="achievement-text">Finalist of Galgotia International Hackathon (GIH) 2k25</div>
     </div>
-  </div>
+  </main>
+
+  <footer class="site-footer">
+    <p>&copy; 2025 Your Name. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
