--- a/achievements.html
+++ b/achievements.html
@@ -33,7 +33,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; Created by Kishalay Das .</p>
   </footer>
 
 </body>
